--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "flowjs/flow-php-server": "^1.0",
         "fruitcake/laravel-cors": "^2.0",
         "gocardless/gocardless-pro": "^4.14",
         "guzzlehttp/guzzle": "^7.0.1",
